# python-presenter

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  upload_package.py
python_presenter/core/presenters/: base_presenter.py  presenter_helper.py
python_presenter/core/templatetags/: presenter_tag.py
tests/: conftest.py
tests/core/presenters/: test_base_presenter.py  test_presenter_helper.py
tests/core/templatetags/: test_presenter_tag.py
