[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-v --cov=python_presenter --cov-report=html --cov-report=term-missing"
testpaths = "tests"
pythonpath = "."

[tool.coverage.run]
source = ["python_presenter"]
omit = [
    "*/__init__.py",
    "*/tests/*"
]